--- a/app/catalog.html
+++ b/app/catalog.html
@@ -109,7 +109,7 @@
                 <a class="button" href="#">Напишите нам</a>
             </div>
     </section>
-</main>11111
+</main>
     <footer class="main-footer">
         <div class="footer-social">
             <ul>
